# email-screening-model

./: Dockerfile  README.md  credentials.json  data.dvc  makefile  models.dvc  pyproject.toml
notebooks/: transformers_model.ipynb  transformers_prediction.ipynb
src/: app.py  email-download-script.py  get-new-emails.py
