[project]
name = ""
version = ""
description = ""
authors = [
    {name = "valeriocardoso", email = "valeriocardoso@outlook.com.br"},
    {name = "Victor Viola", email = "victor.viola@hvarconsulting.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "ipywidgets==8.0.7",
    "ipython==8.14.0",
    "ipykernel==6.24.0",
    "rich==13.4.2",
    "joblib>=1.3.2",
    "streamlit==1.27.0",
    "streamlit-authenticator==0.2.3",
    "simple-salesforce==1.12.5",
    "pyarrow==13.0.0",
    "transformers==4.33.2",
    "pillow==9.5.0",
    "torch==2.0.1+cpu",
    "plotly==5.17.0",
    "datasets>=2.14.5",
    "scikit-learn>=1.3.1",
    "matplotlib>=3.8.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/torch_stable.html"
name = "pytorch_source"